--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,24 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
-body{
-    background: white;
+body, html{   
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;  
+}
+
+#excusa {
+color: rgb(0, 14, 2);
+font-size: 40px;
+font-weight: bold;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+background-color: aqua;
+}
+
